<resources>
    <string name="app_name">My Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date :</string>
    <string name="weather">Weather :</string>
    <string name="temperature">Temperature :</string>
    <string name="pressure">Pressure :</string>
    <string name="sea_level">Sea Level :</string>
    <string name="ground_level">Ground Level :</string>
    <string name="humidity">Humidity :</string>
    <string name="clouds">Clouds :</string>
    <string name="wind_speed">Wind Speed :</string>
    <string name="wind_direction">Wind Direction :</string>
    <string name="give_it_another_try">Give it another try</string>
    <string name="reload">RELOAD</string>
</resources>
